This is the Index Page for my Final Project :)

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
      </form>
 
     <p>____________________________________________________________________________________</p>
-    <form action='/geneCal' method="get">
+    <form action='/geneCalc' method="get">
         <font face="Trebuchet MS"><b>GET THE TOTAL LENGTH AND THE PERCENTAGE OF ALL BASES OF A GIVEN GENE</b></font><br><br>
         <font face="Trebuchet MS">Introduce the desired gene: </font>
         <input type = 'text' size="19" name="gene"><br><br>
